css/style.css
/* ... */
.car-wheel__back {
  top: 156px;
  left: 67px;
}

.car-wheel__front {
  top: 156px;
  left: 256px;

}

@keyframes car-wheel-rotate {
  from {
      transform: rotate(0deg);
  }
  to {
      transform: rotate(350deg);
  }
}

/* Start Button Clicked */

.car-move-off {
  animation: car-move-off 3s ease-in forwards;
}

@keyframes car-move-off {
  from {
      transform: translate(0,0);
  }

  to {
      transform: translate(1024px,0)
  }
}


/* ----- CLOUDS ----- */

.cloud-container {
  /* border: solid 1px yellow; */
  position: relative;
  width: 200%;
  height: 50%;
  position: top left;
}

.cloud {
  position: absolute;
  animation: cloud-drift 35s linear infinite;
  transform: scale(10%, 10%);
}

.cloud-1 {
  /* border: solid 1px red; */
  top: 5%;
  /* left: 55%; */
  animation-delay: -25s;

}

.cloud-2 {
  /* border: solid 1px green; */
  top: 6%;
  /* left: 5%; */
  animation-delay: -2s;
}

.cloud-3 {
  /* border: solid 1px blue; */
  top: 8%;
  /* left: 75%; */
  animation-delay: -22s;
}

.cloud-4 {
  /* border: solid 1px yellow; */
  top: 10%;
  /* left: 30%; */
  animation-delay: -15s;
}

@keyframes cloud-drift {
  0% {
      opacity: 0;
      /* transform-origin: top left; */
      transform: translate(400%, 0);
  }

  20% {
      opacity: 1.0;
  }

  80% {
      opacity: 1.0;
  }

  100% {
      opacity: 0;
      transform: translate(-200%,0);
  }

}

/* ----- START BUTTON ----- */

.start-button {

  --start-shadow-x: -2px;
  --start-shadow-y: 2px;

  --end-shadow-x: -4px;
  --end-shadow-y: -4px;

  bottom: 17%;
  right: 10%;
  z-index: 2;

  border: none;
  background: transparent;
  cursor: pointer;
  
  color: var(--dark-purple-text);
  font-family: "Andika" , sans-serif;
  font-size: 5em;
  font-weight: bolder;
  text-transform: uppercase;

  animation: start-button-glow 1s alternate infinite;

}

/* Start Button clicked */

.start-button-clicked {
  animation: start-button-clicked 150ms linear alternate infinite, start-button-fadeout-lift 1s 0.5s ease-out forwards;
}

@keyframes start-button-glow {
  0% {
      text-shadow: var(--start-shadow-x) var(--start-shadow-y) 0px var(--light-yellow), 0 0 8px rgb(224,208,141, 0);
  }
  
  100% {
      transform: translate(0, 8px);
      text-shadow: var(--end-shadow-x) var(--end-shadow-y) 0px var(--light-yellow), 0 0 16px rgb(224,208,141, 1.0);
  }
}

@keyframes start-button-clicked {
  0% {
      text-shadow: var(--start-shadow-x) var(--start-shadow-y) 0px var(--light-yellow), 0 0 8px rgb(224,208,141, 0), 0 0 0 var(--light-yellow);
  }

  100% {
      text-shadow: var(--end-shadow-x) var(--end-shadow-y) 0px var(--light-yellow), 0 0 16px rgb(224,208,141, 1.0), 0 0 25px var(--light-yellow);
  }
}

@keyframes start-button-fadeout-lift {
  0% {
      opacity: 100%;
  }

  50% {
      opacity: 10%;
  }

  100% {
      transform: translate(0, -200px);
      opacity: 0%;
  }
}

/* -------- END INTRO PAGE --------- */











/* =========================================================================== *\

	MENU PAGE

\* =========================================================================== */

.page-menu {
  height: 768px;
  background-color: orange;
}

.menu1-button {
  position: absolute;
  top: 350px;
  left: 230px;
}

.menu2-button {
  position: absolute;
  top: 350px;
  left: 430px;
}

.menu3-button {
  position: absolute;
  top: 350px;
  left: 630px;
}





/* =========================================================================== *\

	OTHER PAGES

\* =========================================================================== */

.page-Dungeon {
  height: 768px;
  background-color: green;
}

.p1-menu-button,
.p2-menu-button,
.p3-menu-button {
  position: absolute;
  top: 20px;
  left: 800px;
}

.p1-button {
  position: absolute;
  top: 650px;
  left: 800px;
}

.page-yourPageID3 {
  height: 768px;
  background-color: purple;
}

.p2-button {
  position: absolute;
  top: 650px;
  left: 800px;
}







/* =========================================================================== *\

	02 EYE ROOM

\* =========================================================================== */

.page-eye-room {
  height: 768px;
}

.page-eye-room * {
  position: absolute;
}

.eye-room-main {
  width: 1024px;
  height: 768px;
  background: url("/images/eye-room/room-bg.png") 0 -106px no-repeat;
  object-fit: cover;
}


/* Room Light */

.room-light {
  top: 33px;
  left: 288px;
  width: 142px; 
  height: 63px; 
}

.room-light__on {
  opacity: 100%;
}

.room-light__beam {
  opacity: 100%;
  mix-blend-mode: color-dodge;
  top: 35px;
  left: -54px;

  mask-image: linear-gradient(0deg, rgba(255,255,255,0) 25%, rgba(255,255,255,1) 75%,  rgba(255,255,255,1) 100%);
  mask-size: 100% 150%;

  animation: room-light-beam-glow 2s infinite alternate;
}

@keyframes room-light-beam-glow {
  0% {
    mask-position: 0 0;
    filter: saturate(300%);
  }
  100% {
    mask-position: 0 -300px;
    filter: saturate(200%);
  }
}


/* Room Door */
.room-door.closed {
  /* border: solid 1px red; */
  top: 224px;
  left: 630px;
  width: 103.5px;
  height: 287px;
  background: url("/images/eye-room/door-sprites.png");
}

.room-door.open {
  background-position-x: 103.5px;
}


/* Key Sculpture */

.key-sculpture {
  top: 253px;
  left: 287px;
  width: 142px;
  height: 282px;
  background: url("/images/eye-room/key.png");
}

.key-sculpture .flame {
  /* border: solid 1px red; */
  top: 169px;
  left: 63px;
  width: 24px;
  height: 34px;
  background: url("/images/eye-room/key-flame-fill.png") no-repeat;
  clip-path: inset(100% 0 0 0);
  transition: clip-path 800ms;
}


/* Light Switch */

.light-switch {
  top: 317px;
  left: 581px;
  width: 44px;
  height: 62px;
  background: url("/images/eye-room/light-switch-sprites.png") no-repeat;
}

.light-switch.on {
  background-position-x: right;
}
/* ... */

